Fixed overlap media problem

--- a/src/components/CryptoDetails.css
+++ b/src/components/CryptoDetails.css
@@ -12,7 +12,7 @@
   color: white;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 1;
 }
 
 .coin-detail-body {
@@ -20,7 +20,7 @@
   flex-direction: column;
   margin-top: 0px;
   padding: 1%;
-  z-index: 1;
+  z-index: 0;
 }
 
 .coin-heading-container {
